issue#127 uploaded profile image covering entire  area

--- a/wp-content/themes/minyawns/less/main.less
+++ b/wp-content/themes/minyawns/less/main.less
@@ -1065,7 +1065,7 @@ margin-top: -45px;
 		font-size: 28px;
 		font-family: arial;
 		font-weight: bold;
-		margin-top: 60px;
+		margin-top: 72px;
 	}
 	.profiledata{
 		height: 46px;
@@ -6755,7 +6755,7 @@ h3{
 
 .employe-detail{
 	.name {
-		margin-top:48px;
+		margin-top:60px;
 	}
 	.employer-body{
 		margin-bottom: 20px;
@@ -8117,3 +8117,9 @@ textarea[readonly] {
   color: #7b8996;  
 }
 /*edit job readonly text style ends*/
+
+.change-avtar{
+	img{
+		width:170px;
+	}
+}
